# krust

./: .gitignore  .licensure.yml  Cargo.toml  LICENSE.md  README.md  build.rs  create_windows_installer.sh  docker-compose.deb.yml  docker-compose.kafka.yml  docker-compose.windows.yml  docker-compose.yml  fedora-dependencies.sh  krust.desktop  setup.iss  version.sh  win-prepare-and-build.sh
.cargo/: config.toml
.github/workflows/: build_and_publish.yml
.rpm/: krust.spec
build-scripts/: create_windows_installer.sh  linux-deb-prepare-and-build.sh  linux-rpm-prepare-and-build.sh  win-prepare-and-build.sh
data/: icons.gresource.xml  resources.gresource.xml
resources/ui/: KRust.cmb  application.ui  krust-prototype.cmb  krust.cmb  resources.gresource.xml
src/: config.rs  lib.rs  main.rs  main.rs.old  styles.css  styles.less
src/backend/: kafka.rs  mod.rs  repository.rs  settings.rs  worker.rs
src/component/: alert.rs  app.rs  application_header.rs  banner.rs  cache_manager_dialog.rs  connection_list.rs  connection_page.rs  messages_page.rs  mod.rs  settings_dialog.rs  settings_page.rs  status_bar.rs  task_manager.rs  topics_page.rs
src/component/messages/: lists.rs  message_viewer.rs  messages_cache_settings_dialog.rs  messages_page.rs  messages_send_dialog.rs  messages_tab.rs  mod.rs
src/component/topics/: create_dialog.rs  mod.rs  topics_page.rs  topics_tab.rs
src/modals/: about.rs  mod.rs  utils.rs
src/window/: imp.rs  mod.rs
