[package]
name = "krust"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_8"] }
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_2"] }
relm4 = { version = "0.8.0", features = ["libadwaita"] }
relm4-components = "0.8.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
sourceview5 = { version = "0.8.0", features = ["v5_4"] }
directories = "4.0.1"
futures = { version = "0.3.25", default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
ron = "0.8"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.2.4"
thiserror = "1.0.58"
chrono = { version = "0.4.37", features = ["serde"] }
chrono-tz = { version = "0.9.0", features = [ "filter-by-regex" ] }
strum = { version = "0.26.2", features = ["derive"] }
rdkafka = { version = "0.36.2", features = [ "cmake-build", "gssapi", "ssl" ] }

[target.'cfg(target_os = "windows")'.dependencies]
sasl2-sys = { version = "0.1.20",features = ["openssl-vendored"]}

[build-dependencies]
openssl-src = { version = "300", default-features = false, features = ["force-engine"] }
#glib-build-tools = "0.19.0"

[package.metadata.appimage]
auto_link = true
auto_link_exclude_list = [
    #"libc.so*",
    "libdl.so*",
    "libpthread.so*",
]
