[package]
name = "krust"
rust-version = "1.77"
version = "0.0.1"
edition = "2021"
resolver = "2"
authors = ["Miguel A. Baldi Hörlle <miguel.horlle@gmail.com>"]
description = "Kafka desktop client"
repository = "https://github.com/miguelbaldi/krust"
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_14"] }
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_5"] }
relm4 = { version = "0.8.1", features = ["libadwaita", "gnome_46"] }
relm4-components = { version = "0.8.1", features = ["libadwaita"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.10"
rusqlite = { version = "0.31.0", features = ["bundled", "hooks"] }
sourceview5 = { version = "0.8.0", features = ["v5_4"] }
directories = "4.0.1"
futures = { version = "0.3.25", default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["preserve_order"] }
ron = "0.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-tree = "0.3.0"
thiserror = "1.0.58"
chrono = { version = "0.4.37", features = ["serde"] }
chrono-tz = { version = "0.9.0", features = ["filter-by-regex"] }
strum = { version = "0.26.2", features = ["derive"] }
rdkafka = { version = "0.36.2", features = ["cmake-build", "gssapi", "ssl"] }
csv = "1.3.0"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
humansize = "2.1.3"
copypasta = { version = "0.10.1", default-features = true }
sysinfo = "0.31.4"
fs_extra = "1.3.0"

[target.'cfg(target_os = "windows")'.dependencies]
sasl2-sys = { version = "0.1.20", features = ["openssl-vendored"] }

[build-dependencies]
anyhow = "1.0.51"
openssl-src = { version = "300", default-features = false, features = [
    "force-engine",
] }
vergen = { version = "8.3.1", features = ["build", "git", "gitcl", "si"] }
#glib-build-tools = "0.19.0"

[package.metadata.appimage]
auto_link = true
auto_link_exclude_list = [
    "libc.so*",
    "libdl.so*",
    "libpthread.so*",
    "libstdc++.so*",
    "libm.so*",
]
